# diagrambuilder

./: .gitignore  Attributions.txt  BasicPropertyWidget.cpp  BasicPropertyWidget.hpp  BasicPropertyWidget.ui  CMakeLists.txt  Clipboard.cpp  Clipboard.hpp  ColorButton.cpp  ColorButton.hpp  ComponentFileReader.cpp  ComponentFileReader.hpp  CoreForward.hpp  DataPtr.hpp  DiagramComponent.cpp  DiagramComponent.hpp  DiagramContext.cpp  DiagramContext.hpp  DiagramItem.cpp  DiagramItem.hpp  DiagramItemModel.cpp  DiagramItemModel.hpp  DiagramScene.cpp  DiagramScene.hpp  DiagramView.cpp  DiagramView.hpp  Dockerfile  Doxyfile  Exceptions.hpp  ExportComponentOptions.ui  Handle.hpp  MainWindow.old.cpp  MainWindow.old.h  MainWindowUI.ui  Prefix.hpp  PropertyBinder.cpp  PropertyBinder.hpp  PropertyWidget.cpp  PropertyWidget.hpp  TestTableModel.cpp  (+8 more)
Commands/: ConnectItemCommand.cpp  ConnectItemCommand.hpp  DeleteItemCommand.cpp  DeleteItemCommand.hpp  FunctionUndoCommand.hpp  InsertItemCommand.cpp  InsertItemCommand.hpp  InsertItemsCommand.cpp  InsertItemsCommand.hpp  MoveItemCommand.cpp  MoveItemCommand.hpp  RotateItemCommand.cpp  RotateItemCommand.hpp
Components/: BoxComponent.cpp  BoxComponent.hpp  ConnectorComponent.cpp  ConnectorComponent.hpp  ImageComponent.cpp  ImageComponent.hpp  PathComponent.cpp  PathComponent.hpp  PathConnectorComponent.cpp  PathConnectorComponent.hpp  SVGComponent.cpp  SVGComponent.hpp  TextComponent.cpp  TextComponent.hpp
Components/Path/: PathItem.cpp  PathItem.hpp
Components/Util/: HandleItem.cpp  HandleItem.hpp  HatchItem.hpp
DiagramIO/: ComponentFile.cpp  ComponentFile.hpp  DiagramLoader.hpp  InfoDiagramLoader.cpp  InfoDiagramLoader.hpp
Main/: Application.cpp  Application.hpp  ExportComponentOptions.cpp  ExportComponentOptions.hpp  GenericPropertyWidget.cpp  GenericPropertyWidget.hpp  GridMenu.cpp  GridMenu.hpp  GridMenuAction.cpp  GridMenuAction.hpp  MainWindow.cpp  MainWindow.hpp  Preferences.ui  PreferencesDialog.cpp  PreferencesDialog.hpp  Toolbox.cpp  Toolbox.hpp
Plugin/: BasicPlugin.cpp  BasicPlugin.hpp  DiagramComponentPlugin.cpp  DiagramComponentPlugin.hpp
TabFocus/: TabFocusRing.cpp  TabFocusRing.hpp  TabFocusable.hpp  TabFocusableTextItem.cpp  TabFocusableTextItem.hpp
Util/: Backtrace.hpp  ColorSwatch.hpp  Demangle.cpp  Demangle.hpp  Extendable.hpp  FixedWidthStroke.hpp  FunctionSlot.cpp  FunctionSlot.hpp  Levenshtein.hpp  ListUtil.hpp  Log.cpp  Log.hpp  Math.hpp  Optional.hpp  PathTree.hpp  Printable.cpp  Printable.hpp  Property.hpp  QtUtil.cpp  QtUtil.hpp  ReentrancyGuard.hpp  ScopeExit.hpp  StreamOps.hpp  Synchronizer.cpp  Synchronizer.hpp  TestLevenshtein.cpp  Translators.hpp  UUIDTranslator.hpp
